# HotelReservationsAPI

./: .gitignore  main.py  pyproject.toml
app/: __init__.py  alembic.ini  config.py
app/alembic/: env.py
app/api/endpoints/: user.py
app/app/: __init__.py  config.py
app/app/api/endpoints/: ping.py  user.py
app/app/models/: __init__.py  base.py  room.py  user.py
app/models/: room.py  user.py
