[tool.poetry]
name = "hotelreservationsapi"
version = "0.1.0"
description = ""
authors = ["Szymon Anikiej <szymon@anikiej.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
alembic = "^1.8.1"
Flask-Login = "^0.6.2"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
